# infinitetux

./: BUILD-DEBIAN.md  CMakeLists.txt  Doxyfile  README.md  RESOURCE-OVERRIDES.md  build-linux-aarch64.sh  build-linux-x86_64.sh  build-macos-arm64.sh  build-macos-universal.sh  build-macos-x86_64.sh  build-windows-x86_64.sh
debian/: changelog  control  copyright  docs  files  infinitetux.6  infinitetux.install  infinitetux.links  infinitetux.manpages  infinitetux.substvars  rules
debian/.debhelper/infinitetux/: dbgsym-build-ids
debian/.debhelper/infinitetux/dbgsym-root/DEBIAN/: control  md5sums
debian/.debhelper/infinitetux/dbgsym-root/usr/share/doc/: infinitetux-dbgsym
debian/infinitetux/DEBIAN/: control  md5sums
debian/infinitetux/usr/games/: infinitetux
debian/infinitetux/usr/share/applications/: infinitetux.desktop
debian/infinitetux/usr/share/doc/infinitetux/: copyright
debian/infinitetux/usr/share/games/infinitetux/resources/soundfonts/: README.md  soundbank-deluxe.gm
debian/infinitetux/usr/share/metainfo/: infinitetux.metainfo.xml
debian/source/: include-binaries
debian/tests/: control  smoke
docs-java/: README.markdown
include/: Art.h  BgRenderer.h  BulletBill.h  CoinAnim.h  Common.h  Enemy.h  FireFlower.h  Fireball.h  FlowerEnemy.h  Game.h  ImprovedNoise.h  InputConfig.h  Level.h  LevelGenerator.h  LevelRenderer.h  LevelScene.h  LoseScene.h  MapScene.h  Mario.h  Mushroom.h  OptionsScene.h  Particle.h  Scene.h  Shell.h  Sparkle.h  Sprite.h  SpriteTemplate.h  TitleScene.h  WinScene.h  documentation.h
obj-x86_64-linux-gnu/: CMakeCache.txt  Makefile  cmake_install.cmake  install_manifest.txt
src/: Art.cpp  BgRenderer.cpp  BulletBill.cpp  CoinAnim.cpp  Enemy.cpp  FireFlower.cpp  Fireball.cpp  FlowerEnemy.cpp  Game.cpp  ImprovedNoise.cpp  InputConfig.cpp  Level.cpp  LevelGenerator.cpp  LevelRenderer.cpp  LevelScene.cpp  LoseScene.cpp  MapScene.cpp  Mario.cpp  Mushroom.cpp  OptionsScene.cpp  Particle.cpp  Scene.cpp  Shell.cpp  Sparkle.cpp  Sprite.cpp  SpriteTemplate.cpp  TitleScene.cpp  WinScene.cpp  main.cpp
